crates/swc_ecma_parser/tests/test262-error-references/fail/5a627d08e9b33ad1.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/5a627d08e9b33ad1.js:1:2
  |
1 | "\u00";
  |  ^^^^

